[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menus/Open_Sans_Condensed/OpenSansCondensed-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD/CurrentScore.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "fadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 650 ), Vector2( 0, 227.5 ) ]
}

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/PlayButtonNormal.png-c1ed06a5def2203e141ed6bccfcc6faa.stex"

[sub_resource type="StreamTexture" id=5]
load_path = "res://.import/PlayButtonPressed.png-3fc78cac553b0548c690b0e9ad28f03a.stex"

[node name="CurrentScore" type="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = 350.0
margin_right = 512.0
margin_bottom = 495.0
color = Color( 1, 1, 1, 0.392157 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 150
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalStrokes" type="Label" parent="HBoxContainer"]
margin_left = 35.0
margin_top = 24.0
margin_right = 492.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
text = "Total Strokes: 99"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalPar" type="Label" parent="HBoxContainer"]
margin_left = 642.0
margin_top = 24.0
margin_right = 988.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 2 )
text = "Total Par: 99"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeIn = SubResource( 3 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 489.754
margin_top = 260.814
margin_right = 522.754
margin_bottom = 292.814
rect_scale = Vector2( 2, 2 )
disabled = true
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
